--- a/source/sass/components/checkbox.scss
+++ b/source/sass/components/checkbox.scss
@@ -79,7 +79,7 @@ $border-color-hover: $special-grey-3;
   left: 50%;
   transform: translate(-50%, -50%);
 
-  background-image: url("../../img/icons/sprite.svg#checkbox");
+  background-image: url("../img/icons/sprite.svg#checkbox");
   background-repeat: no-repeat;
   background-size: cover;
 
