--- a/source/sass/components/decor-line.scss
+++ b/source/sass/components/decor-line.scss
@@ -13,20 +13,21 @@ $line-color: $accent-color;
   content: "";
   background-color: $line-color;
   height: 2px;
-  width: 100%;
-  left: 0;
-  top: 60%;
+  top: 15px;
+  left: 20px;
   z-index: -1;
+  width: calc(100% - 20px);
 
-  @media (max-width: $tablet-width) {
-    left: 20px;
-    width: calc(100% - 20px);
+  @media (min-width: $tablet-width) {
+    top: 22px;
+    left: 0;
+    width: 100%;
   }
 }
 
 .decor-line__inner {
   @media (min-width: $desktop-width) {
     position: relative;
-    left: -50px;
+    left: -36px;
   }
 }
