--- a/source/sass/components/example-cat.scss
+++ b/source/sass/components/example-cat.scss
@@ -58,12 +58,12 @@ $border-color-description: $special-grey;
 }
 
 .example-cat__text {
-  margin: 0 0 20px 0;
+  margin: 0 0 34px 0;
   color: $font-color;
 
   @media (min-width: $tablet-width) {
     grid-column: 1 / -1;
-    margin: 0 0 54px 0;
+    margin: 0;
 
     font-size: 16px;
     line-height: 24px;
@@ -72,12 +72,12 @@ $border-color-description: $special-grey;
   @media (min-width: $desktop-width) {
     max-width: 440px;
     grid-column: 1 / 2;
-    margin: 0 0 69px 0;
+    margin: 0 0 82px 0;
   }
 }
 
 .example-cat__description-list {
-  margin: 0 0 34px 0;
+  margin: 0 0 20px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -86,40 +86,37 @@ $border-color-description: $special-grey;
     grid-column: 1 / 3;
     justify-content: start;
     gap: 42px;
-    margin: 0 0 105px 0;
+    margin: 70px 0 95px 0;
   }
 
   @media (min-width: $desktop-width) {
-    margin: 0 0 60px 0;
+    margin: 0 0 55px 0;
     grid-column: 1 / 2;
   }
 }
 
 .example-cat__description-item {
-  position: relative;
-  display: flex;
-  flex-direction: column-reverse;
-
-  text-align: center;
+  display: grid;
+  grid-template-rows: min-content min-content;
+  justify-items: center;
 }
 
 .example-cat__description-termin {
-  position: absolute;
+  z-index: 1;
+  grid-row: 2 / 3;
   width: 77px;
-  left: 50%;
-  bottom: -13px;
-  transform: translateX(-50%);
 
   font-size: 12px;
   line-height: 12px;
   text-transform: lowercase;
   color: $font-color;
+  text-align: center;
 
   background-color: $bg-color-termin;
 
   @media (min-width: $tablet-width) {
     width: 130px;
-    bottom: -7px;
+    top: 60px;
 
     font-size: 14px;
     line-height: 14px;
@@ -133,22 +130,38 @@ $border-color-description: $special-grey;
 }
 
 .example-cat__description-text {
-  margin: 0;
-  padding: 15px 0;
-  width: 124px;
+  position: relative;
+  margin: 0 0 7.5px 0;
+  width: 120px;
 
   font-family: $font-secondary;
   font-size: 24px;
   line-height: 24px;
   text-transform: uppercase;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 11px 0;
+    width: 162px;
+    font-size: 30px;
+    line-height: 37px;
+  }
+}
+
+.example-cat__description-text::after {
+  position: absolute;
+  content: "";
+  width: 124px;
+  height: 56px;
+  top: -14px;
+  left: 0;
 
   border: 1px solid $border-color-description;
   border-radius: 3px;
 
   @media (min-width: $tablet-width) {
     width: 162px;
-    font-size: 30px;
-    line-height: 37px;
+    height: 72px;
   }
 }
 
@@ -165,7 +178,7 @@ $border-color-description: $special-grey;
     font-size: 20px;
     line-height: 20px;
     text-align: end;
-    margin: 11px 0 0 0;
+    margin: 65px 0 0 0;
   }
 
   @media (min-width: $desktop-width) {
