--- a/source/sass/components/product-card-additional.scss
+++ b/source/sass/components/product-card-additional.scss
@@ -10,27 +10,32 @@ $font-color-product-details: $special-dark-grey;
   display: grid;
   grid-template-columns: 1fr;
   gap: 13px;
-  padding: 13px 0 19px 0;
+  padding: 13px 0 20px 0;
   align-items: center;
 
-  border: 1px solid $border-color-card;
-  border-left: none;
-  border-right: none;
+  border-top: 1px solid $border-color-card;
+
+  &:last-child {
+    border-bottom: 1px solid $border-color-card;
+  }
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 1fr;
     padding: 26px 38px 28px;
     gap: 24px;
-  }
 
-  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
     border: 1px solid $border-color-card;
+    border-bottom: none;
   }
 
   @media (min-width: $desktop-width) {
     padding: 15px 0;
     display: flex;
     flex-grow: 1;
+
+    border-top: 1px solid $border-color-card;
+    border-left: none;
+    border-right: none;
   }
 }
 
