--- a/source/sass/components/product-card-main.scss
+++ b/source/sass/components/product-card-main.scss
@@ -20,7 +20,11 @@ $font-color-link-more-active: $special-dark-grey-transparent;
   min-height: 209px;
 
   background-image: none;
-  border: 1px solid $border-color-third;
+  border-top: 1px solid $border-color-third;
+
+  &:last-child {
+    border-bottom: 1px solid $border-color-third;
+  }
 
   @media (min-width: $tablet-width) {
     padding: 0 36px 39px;
@@ -184,7 +188,7 @@ $font-color-link-more-active: $special-dark-grey-transparent;
     text-align: center;
 
     @media (min-width: $tablet-width) {
-      width: 70%;
+      width: 135px;
       margin: 0 0 23px 0;
     }
   }
