--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -13,12 +13,12 @@ $font-color: $basic-black;
 
   color: $font-color-mobile;
 
-  background-image: url("../../img/promo-background-mobile.jpg");
+  background-image: url("../img/promo-background-mobile.jpg");
   background-repeat: no-repeat;
   background-position: 50% 0;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/promo-background-mobile@2x.jpg");
+    background-image: url("../img/promo-background-mobile@2x.jpg");
     background-size: 320px 302px;
   }
 
@@ -68,14 +68,14 @@ $font-color: $basic-black;
       left: 50%;
       display: block;
 
-      background-image: url("../../img/promo-background-desktop.jpg");
+      background-image: url("../img/promo-background-desktop.jpg");
       background-repeat: no-repeat;
       background-size: cover;
     }
 
     @media (min-resolution: 2dppx) {
       &::before {
-        background-image: url("../../img/promo-background-desktop@2x.jpg");
+        background-image: url("../img/promo-background-desktop@2x.jpg");
       }
     }
   }
@@ -106,11 +106,12 @@ $font-color: $basic-black;
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    width: 420px;
+    margin: 0 0 41px 0;
+
     font-size: 60px;
     line-height: 60px;
     text-align: start;
-
-    margin-bottom: 41px;
   }
 }
 
@@ -123,10 +124,12 @@ $font-color: $basic-black;
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    width: 400px;
+    margin: 0 0 49px 0;
+
     text-align: start;
     font-size: 20px;
     line-height: 20px;
-    margin: 0 0 49px 0;
   }
 }
 
