--- a/source/sass/components/site-list.scss
+++ b/source/sass/components/site-list.scss
@@ -14,17 +14,17 @@ $font-color-cat: $basic-white;
 }
 
 .site-list__item {
-  padding: 22px 60px 24px;
+  padding: 22px 60px 21px;
 
   text-align: center;
 
-  border: 1px solid $border-color;
+  outline: 1px solid $border-color;
   background-color: $bg-color;
 
   @media (min-width: $tablet-width) {
     padding: 18px 0 12px;
 
-    border: none;
+    outline: none;
     background-color: transparent;
   }
 }
